fix: readable text state styles

--- a/src/styles/partials/blocks/_answer.scss
+++ b/src/styles/partials/blocks/_answer.scss
@@ -40,7 +40,9 @@
 
       .answer-story {
         &__person {
-          display: none;
+          &-image {
+            display: none;
+          }
         }
 
         &__item {
