--- a/src/styles/partials/main.scss
+++ b/src/styles/partials/main.scss
@@ -1,5 +1,7 @@
 html {
-  overflow: hidden;
+  @include min("md") {
+    overflow: hidden;
+  }
 }
 
 body {
